<resources>
    <string name="app_name">JotSpot</string>
    <string name="create_an_entry">Create An Entry</string>
    <string name="want_to_add_something">Want to add something?</string>
    <string name="text_entry_box">..</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="Schedule">Customize Your Schedule</string>
    <string name="jotspot">JotSpot</string>
    <string name="create_account">Click here to create account</string>
    <string name="create">Create</string>

    <string name="preference_file_key">edu.neu.madcourse.jotspot.PREFERENCE_FILE_KEY</string>
    <string name="username_preferences_key">USERNAME_PREFERENCES</string>
    <string name="password_preferences_key">PASSWORD_PREFERENCES</string>

    <string name="entries_path">entries/%s</string>
    <string name="users_path">users/%s</string>

    <string name="date_time_default">Default Date/Time</string>
    <string name="text_entry_default">Default Text Entry</string>
    <string name="photo_entry1_default">Photo 1 for entry</string>
    <string name="photo_entry2_default">Photo 2 for entry</string>
    <string name="photo_entry3_default">Photo 3 for entry</string>
    <string name="audio_play">Play Audio</string>
    <string name="audio_stop">Stop Audio</string>
    <string name="audio_pause">Pause Audio</string>
    <string name="discard_photo_warning">Are you sure you want to discard this photo entry? This cannot be undone.</string>
    <string name="discard_photo_yes">Yes, discard entry</string>
    <string name="discard_photo_no">No, do not discard entry</string>

    <string name="feeling_very_happy">Very Happy</string>
    <string name="feeling_happy">Happy</string>
    <string name="feeling_neutral">Neutral</string>
    <string name="feeling_slightly_bummed">Slightly Bummed</string>
    <string name="feeling_sad">Sad</string>
    <string name="feeling_weepy">Weepy</string>
    <string name="track_your_mood">Track your mood?</string>
    <string name="channel_name">jotspot_notification</string>
    <string name="channel_description">jotspot reminder</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>

    <string name="choose_a_prompt">Choose a prompt!</string>

    <string-array name="prompt_array">
        <item>Choose a prompt!</item>
        <item>What is your favorite thing to do on a rainy day?</item>
        <item>If you could travel anywhere, where would you go?</item>
        <item>What is one good thing that happened to you today?</item>
        <item>What is one thing you would change about today?</item>
        <item>Name a movie/book/show you enjoy and why.</item>
        <item>What is one thing you want to learn how to do?</item>
    </string-array>

    <string-array name="repeat_array">
        <item>Repeat</item>
        <item>Never</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>

    <string name="timestamp_placeholder">Timestamp</string>
    <string name="mood_history_descriptor">Emoji for Mood History</string>

    <string name="prompt_listing">Prompt: %s</string>

    <string name="view_entry">View Entry</string>

    <string name="voice_description">To listen to the voice entry, please click "View Entry."</string>

    <string name="mood_added">Mood added.</string>


</resources>