<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/feelingButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/feeling_very_happy"
            app:srcCompat="@drawable/grinning_face_1f600" />

        <ImageButton
            android:id="@+id/feelingButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/feeling_happy"
            app:srcCompat="@drawable/slightly_smiling" />

        <ImageButton
            android:id="@+id/feelingButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/feeling_neutral"
            app:srcCompat="@drawable/neutral_face_1f610" />

        <ImageButton
            android:id="@+id/feelingButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/feeling_slightly_bummed"
            app:srcCompat="@drawable/confused_face_1f615" />

        <ImageButton
            android:id="@+id/feelingButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/feeling_sad"
            app:srcCompat="@drawable/frowning_face_2639_fe0f" />

        <ImageButton
            android:id="@+id/feelingButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/feeling_weepy"
            app:srcCompat="@drawable/downcast_face_with_sweat_1f613" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>