<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/sentence_date_time_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:hint="@string/date_time_default" />

        <TextView
            android:id="@+id/sentence_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sentence_date_time_view"
            android:layout_alignStart="@id/sentence_date_time_view"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:layout_toStartOf="@id/sentence_go_to_entry"
            android:hint="@string/choose_a_prompt" />

        <TextView
            android:id="@+id/sentence_entry_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sentence_go_to_entry"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:hint="@string/text_entry_default" />

        <Button
            android:id="@+id/sentence_go_to_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/sentence_date_time_view"
            android:layout_alignParentEnd="true"
            android:clickable="false"
            android:text="@string/view_entry" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>