<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OneSentencePromptActivity"
    android:background="@drawable/soft_abstract_background_in_light_colors_vector_21474540">

    <Button
        android:id="@+id/sentence_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/rock_salt"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sentence_discard_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/rock_salt"
        android:text="@string/discard"
        app:layout_constraintEnd_toStartOf="@+id/sentence_save_button"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/one_sentence_entry"
        android:layout_width="370dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="110dp"
        android:autofillHints=""
        android:background="@drawable/button_shape2"
        android:gravity="top|left"
        android:paddingLeft="15dip"
        android:paddingTop="10dip"
        android:paddingRight="15dip"
        android:paddingBottom="10dip"
        android:text="@string/text_entry_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sentence_discard_button" />

    <Spinner
        android:id="@+id/prompt_spinner"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:dropDownWidth="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/one_sentence_entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/feelingButton3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@drawable/button_shape"
        android:contentDescription="@string/feeling_neutral"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toStartOf="@id/feelingButton4"
        app:layout_constraintStart_toEndOf="@id/feelingButton2"
        app:layout_constraintTop_toBottomOf="@+id/one_sentence_entry"
        app:srcCompat="@drawable/neutral_face_1f610" />

    <ImageButton
        android:id="@+id/feelingButton4"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@drawable/button_shape"
        android:contentDescription="@string/feeling_slightly_bummed"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toStartOf="@id/feelingButton5"
        app:layout_constraintStart_toEndOf="@id/feelingButton3"
        app:layout_constraintTop_toBottomOf="@+id/one_sentence_entry"
        app:srcCompat="@drawable/confused_face_1f615" />

    <ImageButton
        android:id="@+id/feelingButton2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@drawable/button_shape"
        android:contentDescription="@string/feeling_happy"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toStartOf="@id/feelingButton3"
        app:layout_constraintStart_toEndOf="@id/feelingButton1"
        app:layout_constraintTop_toBottomOf="@+id/one_sentence_entry"
        app:srcCompat="@drawable/slightly_smiling" />

    <ImageButton
        android:id="@+id/feelingButton5"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@drawable/button_shape"
        android:contentDescription="@string/feeling_sad"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toStartOf="@id/feelingButton6"
        app:layout_constraintStart_toEndOf="@id/feelingButton4"
        app:layout_constraintTop_toBottomOf="@+id/one_sentence_entry"
        app:srcCompat="@drawable/frowning_face_2639_fe0f" />

    <ImageButton
        android:id="@+id/feelingButton6"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="150dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@drawable/button_shape"
        android:contentDescription="@string/feeling_weepy"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/feelingButton5"
        app:layout_constraintTop_toBottomOf="@+id/one_sentence_entry"
        app:srcCompat="@drawable/downcast_face_with_sweat_1f613" />

    <ImageButton
        android:id="@+id/feelingButton1"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@drawable/button_shape"
        android:contentDescription="@string/feeling_very_happy"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toStartOf="@id/feelingButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one_sentence_entry"
        app:srcCompat="@drawable/grinning_face_1f600" />

    <TextView
        android:id="@+id/onesentence_track_mood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/rock_salt"
        android:text="@string/track_your_mood"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/feelingButton1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/one_sentence_entry" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="15dp" />

</androidx.constraintlayout.widget.ConstraintLayout>