<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/soft_abstract_background_in_light_colors_vector_21474540"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".PastSentenceActivity">

    <TextView
        android:id="@+id/past_sentence_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_time_default"
        app:layout_constraintBottom_toTopOf="@+id/past_sentence_prompt_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/past_sentence_prompt_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_prompt"
        app:layout_constraintBottom_toTopOf="@+id/past_sentence_entry_scroll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/past_sentence_date_time" />

    <ScrollView
        android:id="@+id/past_sentence_entry_scroll"
        android:layout_width="342dp"
        android:layout_height="313dp"
        android:layout_marginTop="270dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/past_sentence_entry_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:text="@string/text_entry_default" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>