<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VoiceRecordingScreenActivity"
    android:background="@drawable/soft_abstract_background_in_light_colors_vector_21474540">

<!--    <Button-->
<!--        android:id="@+id/stopPlay"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="StopPlaying"-->
<!--        tools:layout_editor_absoluteX="214dp"-->
<!--        tools:layout_editor_absoluteY="451dp" />-->

    <ImageButton
        android:id="@+id/record_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="#717D7F"
        app:layout_constraintBottom_toTopOf="@id/stop_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/presence_audio_online" />

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="#717D7F"
        app:layout_constraintBottom_toTopOf="@id/mood_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stop_button"
        app:srcCompat="@android:drawable/ic_media_play" />

    <ImageButton
        android:id="@+id/stop_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="#717D7F"
        app:layout_constraintBottom_toTopOf="@id/play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/record_button"
        app:srcCompat="@android:drawable/picture_frame"
        tools:layout_constraintTop_toBottomOf="@id/record_button" />

    <Button
        android:id="@+id/save_voice_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rock_salt"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/discard_voice_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/rock_salt"
        android:text="Discard"
        app:layout_constraintEnd_toStartOf="@+id/save_voice_button"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/mood_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/play_button">

        <ImageButton
            android:id="@+id/feelingButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/feeling_very_happy"
            app:srcCompat="@drawable/grinning_face_1f600" />

        <ImageButton
            android:id="@+id/feelingButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/feeling_happy"
            app:srcCompat="@drawable/slightly_smiling" />

        <ImageButton
            android:id="@+id/feelingButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/feeling_neutral"
            app:srcCompat="@drawable/neutral_face_1f610" />

        <ImageButton
            android:id="@+id/feelingButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/feeling_slightly_bummed"
            app:srcCompat="@drawable/confused_face_1f615" />

        <ImageButton
            android:id="@+id/feelingButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/feeling_sad"
            app:srcCompat="@drawable/frowning_face_2639_fe0f" />

        <ImageButton
            android:id="@+id/feelingButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/feeling_weepy"
            app:srcCompat="@drawable/downcast_face_with_sweat_1f613" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="75dp" />
</androidx.constraintlayout.widget.ConstraintLayout>